Refreshed project; changed styles, added dynamic class change for reset button

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
 
     <header class="page-header">
         <h1 class="page-header__title">
-            <div class="page-header__title--yellow-square"><span class="page-header__title--text-in-square">JS</span></div>’owe książki
+            <div class="page-header__title--yellow-square"><span class="page-header__title--text-in-square">JS</span>
+            </div>’owe książki
         </h1>
     </header>
     <div class="main-wrapper">
@@ -38,12 +39,12 @@
                 </ul>
             </div>
             <div class="search-reset">
-                <button class="search-reset__btn">Wyczyść</button>
+                <button class="search-reset__btn" disabled>Wyczyść</button>
             </div>
         </aside>
         <main class="main-section">
             <ol class="books-list">
-            </ol> 
+            </ol>
 
         </main>
     </div>
